Fix demo error display for large errors
When the error text is very large, it was overflowing into the "x"
button to close the error display.  This fixes the layout of the error
box and makes the text small enough (through padding) to avoid the
"x".

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -109,11 +109,12 @@ html, body {
   padding: 1em;
   line-height: 2em;
   text-align: center;
-  width: 100%;
 }
 
 #error-display-link {
   color: white;
+  display: block;
+  padding: 0 2em;
 }
 
 .input-disabled {
